--- a/app/src/main/res/layout/activity_receive_crypto_asset.xml
+++ b/app/src/main/res/layout/activity_receive_crypto_asset.xml
@@ -80,7 +80,7 @@
                 android:orientation="horizontal"
                 android:weightSum="2"
                 app:layout_constraintTop_toBottomOf="@id/addressFieldCard"
-                android:layout_marginTop="8dp">
+                android:layout_marginTop="15dp">
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/copyAddressBtn"
@@ -92,6 +92,7 @@
                     android:text="@string/copy"
                     android:textColor="@color/white"
                     android:layout_marginEnd="2dp"
+                    android:foreground="?android:attr/selectableItemBackground"
                     />
 
                 <androidx.appcompat.widget.AppCompatButton
@@ -104,6 +105,7 @@
                     android:text="@string/generate"
                     android:textColor="@color/white"
                     android:layout_marginStart="2dp"
+                    android:foreground="?android:attr/selectableItemBackground"
                     />
 
             </LinearLayout>
