--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -17,66 +17,79 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <include
-                android:id="@+id/topAppBar"
-                layout="@layout/app_bar"
-                android:layout_width="match_parent"
+                layout="@layout/circular_progress_bar"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
+                android:layout_gravity="center"
                 />
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:orientation="vertical"
-                app:layout_constraintTop_toBottomOf="@id/topAppBar"
-                app:layout_constraintBottom_toTopOf="@id/bottomNavBarMain"
-                android:weightSum="2">
-
+                android:layout_height="match_parent">
 
                 <include
-                    layout="@layout/home_coin_info"
-                    android:id="@+id/coinInfoCard"
+                    android:id="@+id/topAppBar"
+                    layout="@layout/app_bar"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
                     />
 
-                <androidx.core.widget.NestedScrollView
-                    android:id="@+id/coinsCardParentScrollview"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:minHeight="300dp"
-                    app:layout_constraintTop_toBottomOf="@id/coinInfoCard">
+                    android:orientation="vertical"
+                    app:layout_constraintTop_toBottomOf="@id/topAppBar"
+                    app:layout_constraintBottom_toTopOf="@id/bottomNavBarMain"
+                    android:weightSum="2">
 
-                    <androidx.recyclerview.widget.RecyclerView
+
+                    <include
+                        layout="@layout/home_coin_info"
+                        android:id="@+id/coinInfoCard"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/coinsListRecycler"
-                        >
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
 
-                    </androidx.recyclerview.widget.RecyclerView>
+                        />
 
-                </androidx.core.widget.NestedScrollView>
+                    <androidx.core.widget.NestedScrollView
+                        android:id="@+id/coinsCardParentScrollview"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:minHeight="300dp"
+                        app:layout_constraintTop_toBottomOf="@id/coinInfoCard">
 
-             </LinearLayout>
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/coinsListRecycler"
+                            >
 
-            <include
-                android:id="@+id/bottomNavBarMain"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                layout="@layout/bottom_navbar"
-                android:layout_gravity="bottom"
-                app:layout_constraintBottom_toBottomOf="parent"
-                />
+                        </androidx.recyclerview.widget.RecyclerView>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                    </androidx.core.widget.NestedScrollView>
+
+                 </LinearLayout>
+
+                <include
+                    android:id="@+id/bottomNavBarMain"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    layout="@layout/bottom_navbar"
+                    android:layout_gravity="bottom"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </FrameLayout>
+
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
