--- a/app/src/main/res/layout/circular_progress_bar.xml
+++ b/app/src/main/res/layout/circular_progress_bar.xml
@@ -8,4 +8,5 @@
     android:indeterminate="true"
     style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
     android:theme="@style/ProgressBarTheme"
+    android:elevation="100dp"
     />
