--- a/app/src/main/res/layout/activity_send_crypto_asset.xml
+++ b/app/src/main/res/layout/activity_send_crypto_asset.xml
@@ -3,9 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".SendCryptoAssetActivity"
+    android:minHeight="200dp"
     android:padding="0dp">
 
     <include
@@ -18,27 +19,29 @@
         app:layout_constraintEnd_toEndOf="parent"
         />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="200dp"
         android:background="@color/blueGreyL5"
-        app:layout_constraintTop_toBottomOf="@id/dialogHeader">
+        app:layout_constraintTop_toBottomOf="@id/dialogHeader"
+        android:orientation="vertical">
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:tabIndicatorFullWidth="true"
+            app:tabIndicatorColor="@color/colorAccent"
             android:background="@color/colorPrimaryDark" />
 
 
         <androidx.viewpager.widget.ViewPager
-            android:id="@+id/pager"
+            android:id="@+id/viewPager"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-        />
+            android:layout_height="280dp"
+            />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
