--- a/app/src/main/res/layout/activity_pin_code_auth.xml
+++ b/app/src/main/res/layout/activity_pin_code_auth.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<androidx.core.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,80 +7,170 @@
     android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@android:color/black"
+    android:fillViewport="true">
 
-    <androidx.core.widget.NestedScrollView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:layout_marginTop="20dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imgView"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:src="@drawable/ic_verified_user"
+            app:backgroundTint="@color/colorPrimaryDark"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="40dp"
+            />
+
+
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="30dp">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            app:layout_constraintTop_toBottomOf="@id/imgView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/imgView"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:src="@drawable/ic_verified_user"
-                app:backgroundTint="@color/colorPrimaryDark"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/fingerprintViewParent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone">
 
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/pinCodeInputLayout"
-                android:layout_width="250dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/imgView"
-                style="@style/TextInputLayoutStyle"
-                android:maxWidth="250dp"
-                android:hint="@string/enter_pincode"
-                app:errorEnabled="true">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/pinCodeInput"
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:inputType="numberPassword"
-                    android:maxLines="1"
-                    android:maxLength="4"
-                    android:textSize="18sp"
-                    android:textIsSelectable="false"
+                <TextView
+                    android:id="@+id/fingerprintAuthTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/fingerprint_auth"
                     android:textStyle="bold"
-                    android:letterSpacing="1.0"
-                    android:textColor="@color/blueGreyD2"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:textColor="@color/blueGrey"
+                    android:layout_marginTop="10dp"
+                    android:textSize="18sp"
                     android:textAlignment="center"
-                    android:focusable="true"
-                    android:focusedByDefault="true"
+                    android:textAllCaps="true"
                     />
 
-            </com.google.android.material.textfield.TextInputLayout>
+                <TextView
+                    android:id="@+id/fingerprintAuthMsg"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/fingerint_auth_msg"
+                    app:layout_constraintTop_toBottomOf="@id/fingerprintAuthTitle"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    />
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/continueBtn"
-                android:layout_width="250dp"
-                android:layout_height="60dp"
-                android:background="@drawable/rounded_btn"
-                app:backgroundTint="@color/colorAccent"
-                app:layout_constraintTop_toBottomOf="@id/pinCodeInputLayout"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="20dp"
-                android:textColor="@color/whiteAlpha30"
-                android:text="@string/_continue"
-                android:foreground="?android:attr/selectableItemBackground"
-                />
+                <LinearLayout
+                    android:id="@+id/fingerprintAuthInstructionParent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:orientation="horizontal"
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.core.widget.NestedScrollView>
+                    app:layout_constraintTop_toBottomOf="@id/fingerprintAuthMsg"
+                    android:padding="20dp">
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/fingerprintIcon"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:src="@drawable/ic_fingerprint"
+                        app:tint="@color/colorAccent"
+                        />
+
+                    <TextView
+                        android:id="@+id/fingerprintAuthInstruction"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/fingerprint_auth_instruction"
+                        android:layout_marginStart="5dp"
+                        android:layout_gravity="center_vertical"
+                        />
+                </LinearLayout>
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/userPinCode"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/usePinCode"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/fingerprintAuthInstructionParent"
+                    android:background="@android:color/transparent"
+                    android:textColor="@color/colorPrimaryDark"
+                    />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/pincodeViewParent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="visible"
+                android:orientation="vertical"
+                android:layout_gravity="center_horizontal">
+
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/pinCodeInputLayout"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    style="@style/TextInputLayoutStyle"
+                    android:maxWidth="250dp"
+                    android:hint="@string/enter_pincode"
+                    app:errorEnabled="true">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/pinCodeInput"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:inputType="numberPassword"
+                        android:maxLines="1"
+                        android:maxLength="4"
+                        android:textSize="18sp"
+                        android:textIsSelectable="false"
+                        android:textStyle="bold"
+                        android:letterSpacing="1.0"
+                        android:textColor="@color/blueGreyD2"
+                        android:textAlignment="center"
+                        android:focusable="true"
+                        android:focusedByDefault="true"
+                        />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/continueBtn"
+                    android:layout_width="250dp"
+                    android:layout_height="60dp"
+                    android:background="@drawable/rounded_btn"
+                    app:backgroundTint="@color/colorAccent"
+                    app:layout_constraintTop_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="20dp"
+                    android:textColor="@color/whiteAlpha30"
+                    android:text="@string/_continue"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </FrameLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
