--- a/app/src/main/res/layout/activity_pin_code_auth.xml
+++ b/app/src/main/res/layout/activity_pin_code_auth.xml
@@ -7,7 +7,7 @@
     android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/black"
+    android:background="@android:color/white"
     android:fillViewport="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -29,7 +29,7 @@
 
 
         <FrameLayout
-            android:layout_width="match_parent"
+            android:layout_width="280dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             app:layout_constraintTop_toBottomOf="@id/imgView"
@@ -46,13 +46,13 @@
                     android:id="@+id/fingerprintAuthTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/fingerprint_auth"
+                    android:text="@string/fingerprint"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:textColor="@color/blueGrey"
                     android:layout_marginTop="10dp"
-                    android:textSize="18sp"
+                    android:textSize="16sp"
                     android:textAlignment="center"
                     android:textAllCaps="true"
                     />
@@ -74,10 +74,9 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:orientation="horizontal"
-
                     app:layout_constraintTop_toBottomOf="@id/fingerprintAuthMsg"
-                    android:padding="20dp">
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp">
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/fingerprintIcon"
@@ -85,6 +84,7 @@
                         android:layout_height="48dp"
                         android:src="@drawable/ic_fingerprint"
                         app:tint="@color/colorAccent"
+                        android:layout_marginEnd="5dp"
                         />
 
                     <TextView
@@ -92,16 +92,15 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/fingerprint_auth_instruction"
-                        android:layout_marginStart="5dp"
                         android:layout_gravity="center_vertical"
                         />
                 </LinearLayout>
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/userPinCode"
+                    android:id="@+id/usePinCode"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/usePinCode"
+                    android:text="@string/use_pin_code"
                     android:layout_marginTop="20dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -116,19 +115,31 @@
                 android:id="@+id/pincodeViewParent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="visible"
-                android:orientation="vertical"
-                android:layout_gravity="center_horizontal">
+                android:visibility="visible">
 
+                <TextView
+                    android:id="@+id/pinCodeTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/pin_code"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:textColor="@color/blueGrey"
+                    android:layout_marginTop="10dp"
+                    android:textSize="16sp"
+                    android:textAlignment="center"
+                    android:textAllCaps="true"
+                    />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/pinCodeInputLayout"
-                    android:layout_width="250dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="30dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/pinCodeTitle"
                     style="@style/TextInputLayoutStyle"
                     android:maxWidth="250dp"
                     android:hint="@string/enter_pincode"
@@ -155,18 +166,32 @@
 
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/continueBtn"
-                    android:layout_width="250dp"
+                    android:id="@+id/pincodeContinueBtn"
+                    android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:background="@drawable/rounded_btn"
                     app:backgroundTint="@color/colorAccent"
-                    app:layout_constraintTop_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/pinCodeInputLayout"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="6dp"
                     android:textColor="@color/whiteAlpha30"
                     android:text="@string/_continue"
                     android:foreground="?android:attr/selectableItemBackground"
+                    />
+
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/useFingerprint"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/use_fingerprint"
+                    android:layout_marginTop="15dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/pincodeContinueBtn"
+                    android:background="@android:color/transparent"
+                    android:textColor="@color/colorPrimaryDark"
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
